--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Mobilitynw by kudemusgosu</title>
+    <title>Mobility-network</title>
   </head>
 
   <body>
